# recon-plus

./: .gitignore  CLAUDE.md  pyproject.toml  recon-plus.bat  run.py
recon_plus/: __main__.py  app.py  config.py  launcher.py  preferences.py  session.py  status.py
recon_plus/widgets/: new_session_dialog.py  table_view.py  tamagotchi_view.py
